# movie-ranker

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: LikeHeartButton.test.tsx  LikeHeartButton.tsx
frontend/src/types/: api.ts
postman/: Movie-Ranker.postman_collection.json
specs/001-movie-recommendations/: checklist.md  data-model.md  examples.json  plan.md  quickstart.md  research.md  rules.md  spec.md
specs/001-movie-recommendations/checklists/: requirements.md
specs/002-list-liked-movies/: checklist.md  data-model.md  examples.json  plan.md  quickstart.md  research.md  rules.md  spec.md  tasks.md
specs/003-web-frontend/: checklist.md  data-model.md  examples.json  plan.md  quickstart.md  research.md  rules.md  spec.md  tasks.md
specs/004-heart-like-saved/: checklist.md  data-model.md  examples.json  plan.md  quickstart.md  research.md  rules.md  spec.md  tasks.md
src/movie_ranker/: __init__.py  errors.py  main.py
tests/: conftest.py  test_api.py  test_contract_002_liked_movies.py  test_contract_examples.py
(+20 files in other folders)
